[package]
authors = ["beau trepp <beautrepp@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "bluepill"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = { version= "0.4.3", features = ["timer-queue"]}
cortex-m-semihosting = "0.3.3"
embedded-hal = "*"
panic-halt = "0.2.0"
stm32f1 = {version= "0.8.0", features = ["stm32f103", "rt"]}
stm32f1xx-hal = {version="0.4.0", features = ["stm32f103", "rt"]}

# this lets you use `cargo fix`!
[[bin]]
name = "bluepill"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
