[package]
authors = ["beau trepp <beautrepp@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-midi-stomp"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.11"
cortex-m-rtfm = { version= "0.5.1"}
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
usb-device = {version = "0.2.3"}  
stm32f1xx-hal = {version="0.5.2", features = ["rt","stm32f103","stm32-usbd"]}   
stm32-usbd = { version = "0.5.0", features = ["ram_access_1x16"] }
usbd-midi = { version= "0.1.0", path = "../usbd-midi" }
embedded-hal = "0.2.3"

# this lets you use `cargo fix`!
[[bin]]
name = "rust-midi-stomp"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations


[profile.dev]
opt-level = "z"

[profile.dev.package."*"] # +
opt-level = "z"