[package]
authors = ["beau trepp <beautrepp@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-midi-stomp"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.13"
cortex-m-rtic = { version= "0.5.5"}
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.4"
usb-device = {version = "0.2.3"}  
stm32f1xx-hal = {version="0.7.0", features = ["rt", "stm32f103", "stm32-usbd"]}   
stm32-usbd = { version = "0.5.1", features = ["ram_access_1x16"] }
usbd-midi = { version= "0.2.0" }
embedded-hal = "0.2.4"
heapless = "0.5.6"

# this lets you use `cargo fix`!
[[bin]]
name = "rust-midi-stomp"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev]
opt-level = "z"
